# Polly-the-Penguin

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Display.cpp  Display.h  LLMProcessing.c  LLMProcessing.cpp  LLMProcessing.h  Makefile  Polly  Polly.cpp  Polly.h  README.txt  STT.cpp  STT.h  SpeechRecognizer.cpp  SpeechRecognizer.h  SpeechToText  SpeechToText.c  SpeechToText.sln  SpeechToText.vcxproj  SpeechToText.vcxproj.filters  TextToSpeech.c  TextToSpeech.cpp  TextToSpeech.h  VoiceCustomization.cpp  VoiceCustomization.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  llm_service.py  log.txt  main.cpp  package-lock.json  polly.sh  readMe.txt  speak.py
.cmake/api/v1/reply/: cache-v2-6137f71c51d96ab96f39.json  cmakeFiles-v1-93f0773f9116cf789e22.json  codemodel-v2-e77b36d31ea9c54f6dc4.json  index-2023-11-11T03-34-10-0575.json  target-SpeechToText-Release-09094f0ac1ba42ca236b.json
HtmlDoxygen/: _display_8h.html  _display_8h_source.html  _l_l_m_processing_8h.html  _l_l_m_processing_8h_source.html  _polly_8h.html  _polly_8h_source.html  _s_t_t_8h.html  _s_t_t_8h_source.html  _speech_recognizer_8h.html  _speech_recognizer_8h_source.html  _text_to_speech_8h.html  _text_to_speech_8h_source.html  _voice_customization_8h.html  _voice_customization_8h_source.html  annotated.html  class_display-members.html  class_display.html  class_l_l_m_processing-members.html  class_l_l_m_processing.html  class_polly-members.html  class_polly.html  class_s_t_t-members.html  class_s_t_t.html  class_speech_recognizer-members.html  class_speech_recognizer.html  class_text_to_speech-members.html  class_text_to_speech.html  class_voice_customization-members.html  class_voice_customization.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  index.html  namespaces.html  namespacetinygltf.html
HtmlDoxygen/search/: all_1.js  all_2.js  all_3.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  functions_9.js  functions_a.js  searchdata.js  variables_0.js  variables_1.js
include/polly/: LLMProcessing.h  STT.h  SpeechRecognizer.h  VoiceCustomization.h
webui/: main.js
webui/graphics/polly/: test.html
